Fix metrics spacing

--- a/app/assets/stylesheets/utilities/_helpers.scss
+++ b/app/assets/stylesheets/utilities/_helpers.scss
@@ -144,3 +144,11 @@
 .padding-top-0 {
   padding-top: 0 !important;
 }
+
+.margin-bottom-0 {
+  margin-bottom: 0 !important;
+}
+
+.margin-top-0 {
+  margin-top: 0 !important;
+}
